Update GodotGooglePlayBilling.java
Logging of operations has been added.